# hop

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.claude/: CLAUDE.md  PLAN.md
.claude/rules/: architecture.md  cli-ux.md  comments.md  cross-platform.md  docs.md  gcloud-safety.md  rust.md  security.md  whats-next.md
.claude/skills/add-crate/: SKILL.md
.claude/skills/gcp-check/: SKILL.md
.claude/skills/new-command/: SKILL.md
.claude/skills/release-prep/: SKILL.md
.claude/skills/rust-review/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: README.md
docs/maintainer/: creating-a-release.md  deploying-to-homebrew.md
docs/user/: configuration.md  installation.md  usage.md
packaging/homebrew/: hop.rb
src/: adapters.rs  cli.rs  commands.rs  core.rs  main.rs
src/adapters/: browser.rs  gcloud_config.rs  gcloud_ini.rs  gcloud_process.rs  hop_files.rs  iam_api.rs  login_config.rs  prompt.rs  resource_manager.rs
src/commands/: auth_flow.rs  console.rs  impersonate.rs  login.rs  project_source.rs  status.rs  switch.rs
src/core/: console.rs  context.rs  error.rs  ports.rs  settings.rs  types.rs  workforce.rs
