[package]
name = "hop"
version = "0.1.0"
edition = "2024"
# Minimum toolchain: 1.87 un-deprecated std::env::home_dir (used for gcloud
# config dir resolution); raise deliberately, never implicitly
rust-version = "1.87"
description = "Fast, interactive context switching for Google Cloud Platform"
license = "MIT"
repository = "https://github.com/mervinhemaraju/hop"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
inquire = "0.9.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
# default-features off drops the cookie store (unused by hop), which also
# keeps the RUSTSEC-2026-0009-affected `time` crate out of the tree
ureq = { version = "3.3.0", default-features = false, features = [
  "rustls",
  "gzip",
  "json",
] }

[profile.release]
strip = true
lto = true
